--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,13 +1,13 @@
 <div class="navbar navbar-inverse navbar-fixed-top">
-  <div class="container">
+  <div class="container" >
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand hidden-xs" href="#">Assignment</a>
-      <a class="navbar-brand visible-xs" href="#">C</a>
+      <a class="navbar-brand hidden-xs" href="#top"><i class="glyphicon glyphicon-search"></i></a>
+      <a class="navbar-brand visible-xs" href="#top"><i class="glyphicon glyphicon-search"></i></a>
     </div>
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
